--- a/hp_jill_test.Rmd
+++ b/hp_jill_test.Rmd
@@ -14,6 +14,26 @@ knitr::opts_chunk$set(echo = TRUE)
 
 library(tidyverse)
 hp_data <- read_csv("harry_potter_aggression_full.csv")
+
+hp_data 
 ```
 
 I'm in lab week 6
+
+
+2. Basic wrangling and make graph of Harry Potter and Draco Malfoy aggression rates
+
+```{r}
+
+hp_graph <- hp_data %>% 
+  filter(Name == "Harry" | Name == "Draco Malfoy") %>% 
+  select(Name, book, agg.per.mention) %>% 
+  ggplot(aes(x = book, y = agg.per.mention)) +
+  geom_col(aes(fill = Name), position = "dodge") + # position makes split columns in column graph vs. stacked
+  coord_flip() +
+  theme_bw()
+
+hp_graph
+
+```
+
