--- a/hp_jill_test.Rmd
+++ b/hp_jill_test.Rmd
@@ -31,9 +31,11 @@ hp_graph <- hp_data %>%
   ggplot(aes(x = book, y = agg.per.mention)) +
   geom_col(aes(fill = Name), position = "dodge") + # position makes split columns in column graph vs. stacked
   coord_flip() +
-  theme_bw()
+  theme_bw() +
+  labs(x = "Book", y = "Aggression Rate")
 
 hp_graph
 
 ```
 
+New saved version practice
